# nsec-badge-controller-screen

./: .gitignore  README.md  broadcast_time.py  pin.py  platformio.ini
CAD/: NorthSec screen challenge v18.f3d
esp-idf/: esp_idf.json
esp-idf/components/sdmmc/: sdmmc_cmd.c  sdmmc_mmc.c
esp32/: CMakeLists.txt  askgod-pipe.py  partitions.csv  sdkconfig  sdkconfig.defaults  secure_boot_2_signing_key.pem  secure_flash.sh  secure_reflash.sh
esp32/components/badge_mesh/: CMakeLists.txt
esp32/components/badge_mesh/badge/mesh/: config.cpp  config.h  host.cpp  host.h  main.cpp  main.h  models.h  network.cpp  network.h  ops.cpp  ops.h
esp32/components/badge_mesh/badge/mesh/cmd/: admin.c  admin.cpp  admin.h  provision.cpp  provision.h
esp32/components/badge_mesh/badge/mesh/ops/: census.cpp  census.h  flag.cpp  flag.h  neopixel.cpp  neopixel.h  partyline.cpp  partyline.h  ping.cpp  ping.h  pong.cpp  pong.h  realtimeled.cpp  realtimeled.h  set_name.c  set_name.cpp  set_name.h  time.cpp  time.h  ui_message.cpp  ui_message.h
esp32/components/buzzer/: CMakeLists.txt  buzzer.cpp  buzzer.h  sounds.h
esp32/components/cmd/: CMakeLists.txt  cmd_debug.cpp  cmd_debug.h  cmd_flag.cpp  cmd_flag.h  cmd_modbus.cpp  cmd_modbus.h  cmd_neopixel.cpp  console.cpp  console.h  idf_component.yml
esp32/components/cmd_system/: CMakeLists.txt  (+1 more)
esp32/components/display/: CMakeLists.txt  display.cpp  display.h  lv_utils.cpp  lv_utils.h
esp32/components/display/screens/: assistant.cpp  assistant.h  debug.cpp  debug.h  splash.cpp  splash.h
esp32/main/: CMakeLists.txt  main.cpp
sd-card-data/partition-2/: Employee monitoring device v0.22.stl
(+181 files in other folders)
